sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  do {
    var c=0
    for (i <- 1 to getNombreValeurs()-2 ){
      if (plusPetit(i, i+1)){
        echange(i, i+1)
          c=c+1
      }
    }
  } while (c!=0)
}